[metadata]
name = sr-gym
author = Chainso
url = https://github.com/Chainso/sr-gym
version = file: version.txt
description = A SpeedRunners Gym Environment
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Langauge :: Python 3
    Programming Language :: Python 3.9

[options]
packages = sr_gym
python_requires = >=3.9
install_requires =
    pywin32
    numpy
    gym

[options.extras_require]
docs =
    sphinx
    pytorch-sphinx-theme
