[metadata]
name = sr-gym
author = Chainso
url = https://github.com/Chainso/sr-gym
version = file: version.txt
description = A SpeedRunners Gym Environment
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
license = GPL 3.0 License
license_file = LICENSE
classifiers =
    Programming Langauge :: Python 3
    Programming Language :: Python 3.9

[options]
packages = sr_gym
python_requires = >=3.9
install_requires =
    pywin32
    numpy
    gym
    dataclasses-json
    orjson

[options.extras_require]
docs =
    sphinx
    pytorch-sphinx-theme
